--- a/src/css/themes/_florid.scss
+++ b/src/css/themes/_florid.scss
@@ -41,7 +41,7 @@ body.florid {
 
 	// background color of grid square
 	.gridContainer > .grid .zone {
-		background: rgba(127, 127, 127, 0.05);
+		//background: rgba(127, 127, 127, 0.05);
 	}
 
 	// .zone,
