--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -898,7 +898,7 @@ body {
   }
 }
 
-// grid
+// Wrapper to contain and create space around the grid
 .gridContainer {
   position: relative;
   //left: 50%;
@@ -908,69 +908,6 @@ body {
 
   &.padbottom {
     margin-bottom: 3em;
-  }
-
-  & > .grid {
-    display: grid;
-
-    .zone,
-    .dropZone.grid {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      color: white;
-      cursor: text;
-
-      &.empty {
-        cursor: text;
-
-        .dzu-dropzone {
-          width: 100%;
-          height: 100%;
-
-          &:hover .dzu-inputLabel {
-            visibility: visible;
-            margin-top: 50%;
-            transform: translateY(-50%);
-          }
-
-          .dzu-inputLabel {
-            visibility: hidden;
-            font-size: 0.8em;
-          }
-
-          img {
-            max-width: 100%;
-            max-height: 100%;
-          }
-        }
-      }
-
-      .hud .menu .action {
-        left: unset;
-        transform: unset;
-      }
-    }
-    
-    .dropZone.grid {
-      background: rgba(255, 255, 255, 0.075);
-    }
-
-    .cardComposer,
-    .cardComposer .zone {
-      width: 97%;
-      height: 98%;
-      margin: 0;
-      padding: 0;
-      position: relative;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%);
-      // background-color: rgba(0, 0, 0, 0.01);
-      //background-color: white;
-    }
   }
 }
 
@@ -1032,6 +969,140 @@ body {
       position: absolute;
       left: 0;
       bottom: 0;
+    }
+  }
+}
+
+// grid
+.gridContainer > .grid {
+  display: grid;
+
+  .zone,
+  .dropZone.grid {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    color: white;
+    cursor: text;
+
+    &.empty {
+      cursor: text;
+
+      .dzu-dropzone {
+        width: 100%;
+        height: 100%;
+
+        &:hover .dzu-inputLabel {
+          visibility: visible;
+          margin-top: 50%;
+          transform: translateY(-50%);
+        }
+
+        .dzu-inputLabel {
+          visibility: hidden;
+          font-size: 0.8em;
+        }
+
+        img {
+          max-width: 100%;
+          max-height: 100%;
+        }
+      }
+    }
+
+    .hud .menu .action {
+      left: unset;
+      transform: unset;
+    }
+  }
+  
+  .dropZone.grid {
+    background: rgba(255, 255, 255, 0.075);
+  }
+
+  .cardComposer,
+  .cardComposer .zone {
+    width: 97%;
+    height: 98%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    // background-color: rgba(0, 0, 0, 0.01);
+    //background-color: white;
+  }
+}
+
+// Rune or circle of cards
+.gridContainer.rune {
+  //margin-top: 1em;
+  padding: 1em 1em 2em 1em;
+  position: relative;
+  //top: -4em;
+  //left: -4.5em;
+  //top: 50%;
+  //left: 0.5em;
+  //transform: translateY(-100%) translateX(-50%);
+  //border: 0.25em solid #44ea;
+  border-radius: 50%;
+  
+  .runeItem {
+    background-color: #9595a915;
+    width: 9em;
+    height: 9em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    border: 0.1em solid rgba(255, 255, 255, 0.3);
+    
+    .dropZone {
+      width: 100%;
+      height: 100%;
+      cursor: text;
+      border-radius: 50%;
+    }
+    
+    .cardComposer {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: unset;
+      left: unset;
+      
+      textarea {
+        border-radius: 50%;
+        width: calc(100% - 2em);
+        height: calc(100% - 2em);
+        text-align: center;
+        padding: 2em;
+        transform: translateX(-2em) translateY(-2em);
+      }
+    }
+    
+    .card.mini {
+      border-radius: 50%;
+      
+      .checkbox {
+        position: relative;
+        left: -1.2em;
+        top: 1.2em;
+      }
+      
+      .preview {
+        padding-bottom: 0.5em;
+        right: 2.3em;
+      }
+      
+      .hud.mini.before {
+        top: 1.5em;
+        left: 1.5em;
+        width: 80%;
+      }
     }
   }
 }
@@ -2043,7 +2114,6 @@ body {
       max-width: 70%;
       //position: relative;
       //left: calc(50% + 1.5em);
-      margin-left: 4em;
     }
   }
   textarea {
@@ -4531,6 +4601,7 @@ div.legendAction, legend.clickable {
     
     .stack {
       margin-top: 2em;
+      margin-left: 4em;
     }
   }
   
@@ -4805,6 +4876,19 @@ div.legendAction, legend.clickable {
   color: #fff7;
   line-height: 1.86em;
   padding: 0 2em;
+}
+
+.downboat {
+  border: 0.74em solid #ffffff24;
+  background: #ffffff08;
+  border-radius: 0.5em;
+  border-bottom-left-radius: unset;
+  width: 1.74em;
+  height: 1.74em;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  cursor: pointer;
 }
 
 // Future Update: procedurally map through the css/themes folder and map all filenames found there into an array
