--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1039,16 +1039,10 @@ body {
 
 // Rune or circle of cards
 .gridContainer.rune {
-  //margin-top: 1em;
   padding: 1em 1em 2em 1em;
   position: relative;
-  //top: -4em;
-  //left: -4.5em;
-  //top: 50%;
-  //left: 0.5em;
-  //transform: translateY(-100%) translateX(-50%);
-  //border: 0.25em solid #44ea;
   border-radius: 50%;
+  min-width: 30em;
   
   .runeItem {
     background-color: #9595a915;
@@ -1058,8 +1052,8 @@ body {
     top: 50%;
     left: 50%;
     border-radius: 50%;
-    border: 0.1em solid rgba(255, 255, 255, 0.3);
-    
+    box-shadow: 0px 0px 46px -14px rgba(21, 21, 21, 0.36);
+      
     .dropZone {
       width: 100%;
       height: 100%;
